--- a/StarterCode/static/js/index2.html
+++ b/StarterCode/static/js/index2.html
@@ -34,7 +34,7 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
+                        <label for="date">Filter Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
                       <li class="filter list-group-item">
@@ -53,7 +53,7 @@
                         <label for="shape">Filter Shape</label>
                         <input class="form-control" id="shape" type="text" placeholder="light">
                       </li>
-                    </ul>
+                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
@@ -87,7 +87,6 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
   <script src="static/js/data.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="static/js/app2.js"></script>
 </body>
-
 </html>
